# api/search-funds.ts
@@ -10,6 +10,7 @@ export default function handler(req: VercelRequest, res: VercelResponse) {
     keyword,
     investmentTarget,
     riskLevel,
+    maxRiskLevel,
     investmentArea,
     fundNameCategory,
     dividendFrequency,
@@ -20,6 +21,7 @@ export default function handler(req: VercelRequest, res: VercelResponse) {
     keyword: asString(keyword),
     investmentTarget: asString(investmentTarget),
     riskLevel: riskLevel ? Number(riskLevel) : undefined,
+    maxRiskLevel: maxRiskLevel ? Number(maxRiskLevel) : undefined,
     investmentArea: asString(investmentArea),
     fundNameCategory: asString(fundNameCategory),
     dividendFrequency: asString(dividendFrequency),
